--- a/client/src/config.json
+++ b/client/src/config.json
@@ -1,5 +1,5 @@
 {
   "api": { 
-    "invokeUrl": "http://localhost:3001"
+    "invokeUrl": "http://website-beanstalk-env.eba-nmszfjqk.ap-south-1.elasticbeanstalk.com/"
   } 
 }
